<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.nju.ws</groupId>
    <artifactId>njuLink</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <!--<dependency>-->
            <!--<groupId>org.apache.jena</groupId>-->
            <!--<artifactId>apache-jena-libs</artifactId>-->
            <!--<type>pom</type>-->
            <!--<version>3.1.0</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.slf4j</groupId>-->
            <!--<artifactId>slf4j-simple</artifactId>-->
            <!--<version>1.7.20</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>dom4j</groupId>-->
            <!--<artifactId>dom4j</artifactId>-->
            <!--<version>1.6.1</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>net.sourceforge.owlapi</groupId>-->
            <!--<artifactId>owlapi-distribution</artifactId>-->
            <!--<version>5.1.0</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>org.jxls</groupId>-->
            <!--<artifactId>jxls-jexcel</artifactId>-->
            <!--<version>1.0.6</version>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->
    </dependencies>

</project>